src/objects/Int_Agreement_Line_Feature__c.object
<CustomObject>
    <description>Int Agreement Line Feature</description>
    <fields>
        <fullName>Agreement_Line_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Line Name</description>
        <label>Agreement Line Name</label>
        <referenceTo>Int_Agreement_Line__c</referenceTo>
        <relationshipLabel>Int Agreement Line Features</relationshipLabel>
        <relationshipName>Int_Agreement_Line_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Line_Number__c</fullName>
        <description>Agreement Line Number</description>
        <label>Agreement Line Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreement Line Features</relationshipLabel>
        <relationshipName>Int_Agreement_Line_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <description>Feature Name</description>
        <label>Feature Name</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_AlphaNumeric__c</fullName>
        <description>Value AlphaNumeric</description>
        <label>Value AlphaNumeric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_DateTime__c</fullName>
        <description>Value DateTime</description>
        <label>Value DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value_Numeric__c</fullName>
        <description>Value Numeric</description>
        <label>Value Numeric</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <label>Int Agreement Line Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Line_Name__c</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Agreement_Source_System__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Line_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AFI-{0000000000}</displayFormat>
        <label>Agreement Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreement Line Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>